<resources>
    <string name="app_name">IRaMe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_radius">Radius</string>
    <string name="title_finance">Finance</string>
    <string name="title_setting">Setting</string>
    <string name="title_menu">Menu</string>
    <string name="title_logout">Logout</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_voucher">Voucher</string>
    <string name="title_profile">Profile</string>
    <string name="title_authenticate">Authenticate</string>
    <string name="title_username">username</string>
    <string name="title_password">password</string>
    <string name="title_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add">Add</string>
    <string name="title_a">A</string>
    <string name="title_dummy">Dummy</string>
    <string name="title_dummy_desc">Dummy Description</string>
    <string name="date_dummy">2016-03-01 15:15:15</string>
    <string name="title_name">menu name</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="title_activity_reseller">ResellerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activated">Activated</string>
    <string name="title_balance">Balance</string>
    <string name="title_refill">Refill Balance</string>
    <string name="title_ok">Ok</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_search">Search</string>
    <string name="title_date_start">date start</string>
    <string name="title_date_end">date end</string>
    <string name="title_transaction_in">Balance OUT</string>
    <string name="title_transaction_out">Balance IN</string>
    <string name="title_transaction_code">Transaction Code</string>
    <string name="title_status">Status</string>
    <string name="title_value">Value</string>
    <string name="title_information">Information</string>
    <string name="title_created">Created At</string>
    <string name="title_balance_refill">Balance Refill</string>
    <string name="title_package">Package</string>
    <string name="title_update">Update</string>
    <string name="title_form">Form</string>
    <string name="title_package_name">package name</string>
    <string name="title_validity_value">validity value</string>
    <string name="title_price">price</string>
    <string name="title_margin">margin</string>
    <string name="title_users">Users</string>
    <string name="title_trace">Trace</string>
    <string name="hint_profile">profile name</string>
    <string name="hint_priority">priority</string>
    <string name="title_limit_user">limit users</string>
    <string name="hint_limit_users_count">limit users</string>
    <string name="title_limit_speed">limit speed</string>
    <string name="hint_limit_speed_cir_upload">CIR upload</string>
    <string name="title_kb">kb</string>
    <string name="hint_limit_speed_mir_upload">MIR upload</string>
    <string name="hint_limit_speed_cir_download">CIR download</string>
    <string name="hint_limit_speed_mir_download">MIR download</string>
    <string name="title_upload">upload</string>
    <string name="title_download">download</string>
    <string name="title_short_byte">b</string>
    <string name="title_short_kilobyte">kb</string>
    <string name="title_short_megabyte">mb</string>
    <string name="title_pppoe_or_hotspot">PPPoE / Hotspot</string>
    <string name="title_keyword">keyword</string>
    <string name="title_server_address">server address</string>
    <string name="title_port">port</string>
    <string name="title_ip_mikrotik">mikrotik ip address</string>
    <string name="title_secret">secret</string>
    <string name="title_nas">NAS</string>
    <string name="title_invoice">Invoice</string>
    <string name="title_payment">Payment</string>
    <string name="title_configuration">Configuration</string>
    <string name="title_prepaid">Prepaid</string>
    <string name="title_postpaid">Postpaid</string>
    <string name="title_type_customer">Type Customer</string>
    <string name="title_customer">Customer</string>
    <string name="title_kind_customer">Kind Customer</string>
    <string name="hint_name">name</string>
    <string name="hint_nominal">nominal</string>
    <string name="title_history_payment">History Payment</string>
    <string name="title_default_no_value">-</string>
    <string name="title_nominal">nominal</string>
    <string name="title_current">Current</string>


    <!--  ADDED FOR TEST THEME  -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_title_import">Import</string>
    <string name="nav_title_gallery">Gallery</string>
    <string name="nav_title_slideshow">Slideshow</string>
    <string name="nav_title_tools">Tools</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_toggle_theme">Toggle Theme</string>
    <string name="title_topic_course">Design Thinking</string>
    <string name="number_courses">19 courses</string>
    <string name="msg_splash">EducationApp</string>
    <string name="title_reseller">Reseller</string>
    <string name="desc_reseller">Added resellers to increase sales.</string>
    <string name="desc_transaction">Track voucher transactions.</string>

    <string name="desc_invoice">Manage invoices to track consumer payments.</string>
    <string name="desc_finance">Plan marketing with your business model</string>
    <string name="desc_setting">Make the application the way you want.</string>
    <string name="desc_users">Account used to access your network.</string>
    <string name="desc_profile">Properties needed to maximize the users function.</string>
    <string name="desc_trace">Track account usage history to minimize errors.</string>
    <string name="desc_nas">Connect your remote machine to mikrotik box.</string>
    <string name="desc_menu">Set reseller purchase needs with the menu.</string>
    <string name="desc_not_foud">not found</string>
    <string name="title_hotspot">Hotspot</string>
    <string name="title_pppoe">PPPoE</string>
    <string name="todo">TODO</string>
    <string name="desc_no_data">No one data here...</string>
    <string name="hint_pool_name">pool name</string>
    <string name="title_retry">retry</string>
    <string name="title_payment_list">Payment List</string>
</resources>