<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nas.NasActivity">

    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/et_host"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_ip_mikrotik"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/et_secret"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_secret"
        app:layout_constraintTop_toBottomOf="@id/et_host"
        app:layout_constraintStart_toStartOf="@id/et_host"
        app:layout_constraintEnd_toEndOf="@id/et_host"/>

    <Button
        style="@style/AppTheme.Button"
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_save"
        android:textAllCaps="false"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="@id/et_host"
        app:layout_constraintEnd_toEndOf="@id/et_host"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>