<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.users.UFormFragment">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_username"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_password"
        android:inputType="text"
        android:maxLines="1"
        android:minLines="1"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintEnd_toEndOf="@id/et_username"/>


    <TextView
        android:id="@+id/tv_title_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintEnd_toStartOf="@id/spn_profile"/>

    <Spinner
        android:id="@+id/spn_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_title_profile"
        app:layout_constraintStart_toEndOf="@id/tv_title_profile"
        app:layout_constraintEnd_toEndOf="@id/et_username"/>

    <View
        android:id="@+id/v_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_title_profile"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintEnd_toEndOf="@id/et_username"/>

    <TextView
        android:id="@+id/tv_title_package"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_package"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintEnd_toStartOf="@id/spn_package"/>

    <Spinner
        android:id="@+id/spn_package"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_title_package"
        app:layout_constraintStart_toEndOf="@id/tv_title_package"
        app:layout_constraintEnd_toEndOf="@id/et_username"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintEnd_toEndOf="@id/et_username"/>

</androidx.constraintlayout.widget.ConstraintLayout>