<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/contentBodyColor"
    android:padding="10dp">

    <TextView
        android:id="@id/tv_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:text="@string/title_a"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        style="@style/AppTheme.TextView"
        android:id="@id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tv_icon"
        android:text="@string/title_dummy"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"/>

    <TextView
        style="@style/AppTheme.TextView"
        android:id="@id/tv_long_information"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:layout_toStartOf="@+id/img_icon"
        android:layout_toEndOf="@+id/tv_icon"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title_dummy"
        android:textStyle="bold" />

    <TextView
        style="@style/AppTheme.TextView"
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_long_information"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/tv_icon"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title_dummy_desc" />

    <TextView
        style="@style/AppTheme.TextView"
        android:id="@id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_title"
        android:layout_alignParentEnd="true"
        android:text="@string/date_dummy" />

    <ImageView
        android:id="@id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_date"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_double_arrow_24" />

    <View
        android:layout_toEndOf="@id/tv_icon"
        android:layout_marginStart="5dp"
        android:layout_below="@id/tv_description"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/nav_bar_color"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</RelativeLayout>
