<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configuration.ConfigurationActivity">

    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/et_host"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_server_address"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:minLines="1"
        android:maxLines="1"
        android:lines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_port"/>

    <EditText
        style="@style/AppTheme.EditText"
        android:id="@+id/et_port"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_port"
        android:inputType="number"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:maxLength="4"
        android:maxLines="1"
        android:lines="1"
        app:layout_constraintTop_toTopOf="@id/et_host"
        app:layout_constraintStart_toEndOf="@id/et_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/et_host"/>

    <Button
        style="@style/AppTheme.Button"
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_save"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="@id/et_host"
        app:layout_constraintEnd_toEndOf="@id/et_port"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>